# Anima-for-spectrum-experimental

./: Example-workflow.json  LICENSE  README.md  __init__.py  pyproject.toml  v3_nodes.py
core/: __init__.py  calibration.py  feature_sites.py  forecast_metrics.py  forecast_records.py  helpers.py  intermediate_features.py  intermediate_spectrum.py  model_introspection.py  replay.py  schedule.py  spectrum.py  topology.py
docs/: ANIMA_SPECTRUM_REFACTOR_PROGRESS.md  ANIMA_SPECTRUM_REFACTOR_SPEC.md  ANIMA_SPECTRUM_REFACTOR_TASKS.md  NEXT_CODEX_HANDOFF_2026-06-13.md  refactor-history.md
docs/context_refactor/: README.md  base-workflow-comparison-2026-03-29.md  base-workflow-comparison-checklist.md  base-workflow-comparison-record-template.md  run_flex_window_api_comparison.py  run_off_w18_w15_multi_prompt.py
docs/context_refactor/archive/: README.md
docs/context_refactor/logs/: phase2-20260329T162358.662187Z-run01.jsonl  phase2-20260329T162436.743731Z-run01.jsonl  phase2-20260329T162811.217989Z-run01.jsonl  phase2-20260329T163040.530024Z-run01.jsonl
docs/context_refactor/workflows/: anima_spectrum_debug_minimal.json  image_anima_base_v1_spectrum_debug(api).json  image_anima_base_v1_spectrum_debug.json
nodes/: __init__.py  compat.py  input_specs.py  phase2.py
tests/: test_calibration.py  test_feature_sites.py  test_forecast_metrics.py  test_forecast_records.py  test_input_specs.py  test_intermediate_spectrum_controller.py  test_replay_schedule.py  test_spectrum_forecaster.py  test_topology.py
web/: anima_spectrum_legacy_ui.js
(+16 files in other folders)
