[project]
name = "comfyui-anima-for-spectrum"
description = "Anima-for-spectrum nodes for ComfyUI"
version = "0.1.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Shiba-2-shiba/Anima-for-spectrum"
Documentation = "https://github.com/Shiba-2-shiba/Anima-for-spectrum"
"Bug Tracker" = "https://github.com/Shiba-2-shiba/Anima-for-spectrum/issues"

[tool.comfy]
PublisherId = "shiba-2-shiba"
DisplayName = "Anima-for-spectrum"
Icon = ""
includes = []
